@startuml

title __CONTROL's Class Diagram__\n

  package  {
    package control {
      class AirlineAccountController {
          + AirlineAccountController()
          # populateEmployeeFlights()
          - filterFlights()
          - cancelFlight()
          + displayMenu()
      }
    }
  }
  

  package  {
    package control {
      class CustomerAccountController {
          + CustomerAccountController()
          # populateEmployeeFlights()
      }
    }
  }
  

  package  {
    package control {
      class SearchController {
          - airports : ArrayList<Airport>
          + SearchController()
          + searchForRoute()
          + getAirports()
          + retrieveAirports()
          - retrieveFlightsFromServerByAirport()
          + retrieveAllFlightsFromServer()
      }
    }
  }
  

  package  {
    package control {
      class UIController {
          {static} + shared : UIController
          - routeOrigin : String
          - routeDestination : String
          + UIController()
          + logIn()
          + register()
          + logout()
          + createLoggingContext()
          + accountControl()
      }
    }
  }
  

  package  {
    package control {
      class UserControl {
          + UserControl()
          + getUser()
          + createUser()
          - validateUsername()
          - validatePassword()
      }
    }
  }
  

  AirlineAccountController o-- AirlineEmployee : currentUser
  AirlineAccountController o-- SearchController : search
  CustomerAccountController o-- Customer : currentUser
  CustomerAccountController o-- SearchController : search
  SearchController o-- APIRequest : dbHandler
  SearchController o-- JsonObjectConverter : jsonObjectConverter
  UIController o-- User : currentUser
  UIController o-- UserControl : userCon
  UserControl o-- Factory : factory
  UserControl o-- FactoryProducer : prodcuer
  UserControl o-- APIRequest : dbPullHandler
  UserControl o-- APIRequest : dbInsertHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
